--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
     "skipLibCheck": true,
-    "noImplicitAny": false,       // any 타입 허용
-    "strict": false,              // 엄격 모드 해제
-    "skipLibCheck": true          // 라이브러리 타입 체크 건너뛰기
-
-    /* 🚨 여기부터가 핵심 치트키입니다 (오류 무시 설정) 🚨 */
-    "noImplicitAny": false,
-    "strict": false,
-    "strictNullChecks": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    /* ------------------------------------------------ */
-
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noImplicitAny": false
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
