--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "vite": "^3.0.4"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
+    "openai": "^6.15.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   }
